tests/negative/regression/r10.orng
// r10.orng:6:14: error: attempt to take slice-of something that is not an array
//     let a = []2
//             ^
// 
fn main () -> () {
    let a = []2
    a
}